# ezenc

./: README.md  ezenc.py  pyproject.toml
src/ezenc/: __main__.py
