[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ez-encrypt"
version = "1.0.6"
description = "encode / decode anything"
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ez-encrypt = "ezenc.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ezenc"]